--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^2.0.3",
     "pinia": "^3.0.4",
+    "primevue": "^4.5.4",
     "vue": "^3.5.27"
   },
   "devDependencies": {
